--- a/prelims.tex
+++ b/prelims.tex
@@ -262,7 +262,7 @@ And we have $$( \xgate^{b_1} \otimes  \xgate^{b_2}) ( \zgate^{a_1} \otimes  \zga
 
 
 \subsection{Gate Teleportation}
-\label{protocol: gate  teleportation}
+\label{protocol: gate-teleportation}
 
 We recall the \emph{Bell states}: %$\ket{\beta_{00}},$  $\ket{\beta_{01}},$ $\ket{\beta_{10}}$ and $\ket{\beta_{11}}.$
 $\ket{\beta_{00}}=\frac{1}{\sqrt2}\left(\ket{00}+\ket{11}\right)$, ${\beta_{01}}=\frac{1}{\sqrt2}\left(\ket{01}+\ket{10}\right)$,
