--- a/main.tex
+++ b/main.tex
@@ -34,11 +34,8 @@
 \maketitle
 
 \begin{abstract}
-An \emph{indistiguishability obfuscator} takes as input a circuit %C$ 
-and outputs a new circuit, %$C'$, 
-such that for any two circuits that compute the  \emph{same} function, the ouputs of the indistinguishability obfuscator are 
-%$C'_1$ and $C'_2$ are
- computationally indistinguishable. In this paper we study indistinguishability obfuscation for \emph{quantum} circuits. We construct an indistinguishability  obfuscator that takes as input a quantum circuit, and outputs a quantum state and a quantum circuit, which together can be used to evaluate the original quantum circuit, on any quantum input; the security guarantee being that for two quantum circuits of the same size that have the same input-output behaviour, the outputs of the obfuscator are indistinguishable. In our construction, the size of the output of the obfuscator is exponential in the number of non-Clifford gates, which means that the construction is efficient as long as the number of non-Clifford gates is logarithmic. \anote{Need to update prior text, based on final results. }
+An \emph{indistiguishability obfuscator} $i\mathcal{O}$ is probabilistic polynomial-time algorithm that takes a circuit $C$ as as input%C$ 
+and outputs a new circuit $C^\prime,$ that has the same functionality as the input circuit. Moreover, for any two circuits of similar size that compute the \emph{same} function, the ouput of the indistinguishability obfuscator are computationally indistinguishable. In this paper we study indistinguishability obfuscation for \emph{quantum} circuits. We construct an indistinguishability  obfuscator that takes as input a quantum circuit, and outputs a quantum state and a quantum circuit, which together can be used to evaluate the original quantum circuit, on any quantum input; the security guarantee being that for two quantum circuits ({\em not necessarily of the same size}) that have the same input-output behaviour, the outputs of the obfuscator are indistinguishable. In our construction, the size of the output of the obfuscator is exponential in the number of non-Clifford gates, which means that the construction is efficient as long as the number of non-Clifford gates is logarithmic. \anote{Need to update prior text, based on final results. }
 \end{abstract}
 
 \newpage
